# chat-server-c

./: CMakeLists.txt  README.md  poolconf.ini
include/: public.hpp
include/server/: chatserver.hpp  chatservice.hpp
include/server/db/: db.h  dbpool.h
include/server/model/: friendmodel.hpp  group.hpp  groupmodel.hpp  groupuser.hpp  offlinemessagemodel.hpp  user.hpp  usermodel.hpp
src/client/: CMakeLists.txt  main.cc
src/server/: CMakeLists.txt  chatserver.cc  chatservice.cc
src/server/db/: db.cc  dbpool.cc
src/server/model/: friendmodel.cc  groupmodel.cc  main.cc  offlinemessagemodel.cc  usermodel.cc
test/testjson/: testjson  testjson.cc
test/testmuduo/: CMakeLists.txt  muduo_server.cc
